force-app/main/default/objects/ucinn_ascendv2__Proposal_Designation__c/ucinn_ascendv2__Proposal_Designation__c.object-meta.xml
<CustomObject>
    <description>Information about the proposal specific to a designation.</description>
    <label>Proposal Designation</label>
    <nameField>
        <displayFormat>PD-{0000000}</displayFormat>
        <label>Proposal Designation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Designations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>