force-app/main/default/objects/ucinn_ascendv2__Proposal_Designation__c/fields/ucinn_ascendv2__Academic_Organization__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Academic_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Organization</label>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Proposal Designations</relationshipLabel>
    <relationshipName>Proposal_Designations</relationshipName>
    <type>Lookup</type>
</CustomField>