force-app/main/default/objects/ucinn_ascendv2__Proposal_Designation__c/fields/ucinn_ascendv2__Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>