force-app/main/default/objects/ucinn_ascendv2__Proposal_Designation__c/fields/ucinn_ascendv2__Face_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Face_Value__c</fullName>
    <label>Face Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>