force-app/main/default/objects/ucinn_ascendv2__Proposal_Designation__c/fields/ucinn_ascendv2__Funding_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Funding_Method__c</fullName>
    <label>Funding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Donor Advised Fund</fullName>
            </value>
            <value>
                <fullName>Gift In Kind</fullName>
            </value>
            <value>
                <fullName>PG-Bequest Intention</fullName>
            </value>
            <value>
                <fullName>PG-Charitable Gift Annuity</fullName>
            </value>
            <value>
                <fullName>PG-Charitable Lead Trust</fullName>
            </value>
            <value>
                <fullName>PG-Charitable Remainder Trust</fullName>
            </value>
            <value>
                <fullName>PG-Estate Gift</fullName>
            </value>
            <value>
                <fullName>PG-Life Estate Gift</fullName>
            </value>
            <value>
                <fullName>PG-Life Insurance</fullName>
            </value>
            <value>
                <fullName>PG-Pooled Income Fund</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retirement Account</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>