force-app/main/default/objects/ucinn_ascendv2__Proposal_Designation__c/fields/ucinn_ascendv2__Proposal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal__c</fullName>
    <label>Proposal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Proposal field must look up to a proposal type.</errorMessage>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Proposal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposal Designations</relationshipLabel>
    <relationshipName>Proposal_Designations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>